--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,44 @@
-.grid {
+#gallery {
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: minmax(100px, 200px);
+    grid-auto-flow: dense;
+}
+.img-wrapper:nth-child(4n + 2) {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+#gallery .img-wrapper {
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px #d0f6fd;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    position: relative;
+}
+#gallery .img-wrapper .gif {
+    min-height: calc(100% - 28px);
+    object-fit: cover;
+}
+#gallery .img-wrapper span {
+    background: #020024;
+    background: linear-gradient(180deg, #020024 0%, #191972 85%, #1a61f199 100%);
+    color: #fff;
+    font-weight: 800;
+    padding: 2px;
+    text-align: center;
 }
 
-
-
-@media screen and (max-width: 1000px) {
-    .grid {
-        grid-template-columns: repeat(3, 1fr);
+@media only screen and (max-width: 550px) {
+    #gallery {
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        grid-auto-rows: minmax(60px, 120px);
+    }
+    #gallery .img-wrapper span {
+        font-size: .8rem;
+        font-weight: 500;
+        padding: 1px;
     }
 }
-@media screen and (max-width: 600px) {
-    .grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
+
