--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,27 @@
+#items-wrapper {
+    display: grid;
+    grid-gap: 5px 15px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: 60px;
+    margin-bottom: 1em;
+}
+.item-btn {
+    align-self: center;
+    background: linear-gradient(180deg, #020024 0%, #191972 90%, #4f87f8 100%);
+    border-radius: 3px;
+    color: #fff;
+    cursor: default;
+    padding: 10px 5px;
+    text-align: center;
+}
+.item-btn:hover {
+    background: linear-gradient(0deg, #020024 0%, #191972 90%, #4f87f8 100%);
+}
+.item-btn:active {
+    background-color: #191972;
+    box-shadow: inset 0 0 2px 2px #7f99ce;
+}
+
 #gallery {
     display: grid;
     grid-gap: 15px;
@@ -23,7 +47,7 @@
 }
 #gallery .img-wrapper span {
     background: #020024;
-    background: linear-gradient(180deg, #020024 0%, #191972 85%, #1a61f199 100%);
+    background: linear-gradient(180deg, #020024 0%, #191972 85%, #4f87f8 100%);
     color: #fff;
     font-weight: 800;
     padding: 2px;
