--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
+* {
+    font-family: 'Permanent Marker', Helvetica, sans-serif !important;
+}
 #items-wrapper {
     display: grid;
     grid-gap: 5px 15px;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
     grid-auto-rows: 60px;
     margin-bottom: 1em;
 }
@@ -11,6 +14,8 @@
     border-radius: 3px;
     color: #fff;
     cursor: default;
+    font-family: 'Gochi Hand', Helvetica, sans-serif !important;
+    font-size: 1.1rem;
     padding: 10px 5px;
     text-align: center;
 }
@@ -55,6 +60,15 @@
 }
 
 @media only screen and (max-width: 550px) {
+    #items-wrapper {
+        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+        grid-auto-rows: 40px;
+    }
+    .item-btn {
+        font-size: .9rem;
+        padding: 5px;
+    }
+    
     #gallery {
         grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
         grid-auto-rows: minmax(60px, 120px);
