--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 * {
     font-family: 'Permanent Marker', Helvetica, sans-serif !important;
+    user-select: none;
 }
 #items-wrapper {
     display: grid;
     grid-gap: 5px 15px;
-    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     grid-auto-rows: 60px;
     margin-bottom: 1em;
 }
@@ -34,7 +35,7 @@
     grid-auto-rows: minmax(100px, 200px);
     grid-auto-flow: dense;
 }
-.img-wrapper:nth-child(4n + 2) {
+.img-wrapper:nth-child(5n + 3) {
     grid-column: span 2;
     grid-row: span 2;
 }
